# seegurke

./: CMakeLists.txt  README.md  camera.py  control.py  main.py  model.py  requirements.txt  ship.py  sprite.py  water.py  wind.py
art/: cannonball.xcf  ship.xcf  water.xcf
data/: cannonball.xcf  ship.xcf  water.xcf  wind.xcf
include/proto/: cannonball.hpp  cannonball.hpp~  common.hpp~  sea.hpp  ship.hpp  ship.hpp~
src/proto/: cannonball.cpp  cannonball.cpp~  common.cpp  common.cpp~  main.cpp  main.cpp~  sea.cpp  ship.cpp  ship.cpp~
